fix footer collapse arrow position

--- a/less/_footer.less
+++ b/less/_footer.less
@@ -21,8 +21,7 @@
 		position: relative;
 
 		.footer-listTitle-arrows {
-		    float: right;
-		    padding-right: 30px;
+	        padding-left: 100px;
     
     		color: @grayregular;
     		font-size: 11px;
