--- a/main.css
+++ b/main.css
@@ -2694,8 +2694,7 @@ div.fancy-select ul.options li.hover {
   position: relative;
 }
 .footer-listTitle .footer-listTitle-arrows {
-  float: right;
-  padding-right: 30px;
+  padding-left: 100px;
   color: #bec0c2;
   font-size: 11px;
   text-decoration: none;
